mule-fundamentals/v/3.7/build-a-hello-world-application.adoc
= Build a Hello World Application
:keywords: anypoint, hello world, tutorial

It's time to roll up your sleeves and build your first Anypoint Studio application!

As the objective of this quick tutorial is get something built and running fast, this document doesn't spend much time explaining components. More detailed explanations and concepts exist in the link:/mule-fundamentals/v/3.7/first-day-with-mule[First Day with Mule] and link:/mule-fundamentals/v/3.7/first-week-with-mule[First Week with Mule] sections of the link:/mule-fundamentals/v/3.7[Mule Fundamentals], but for now, let's just see Mule work: you're about to build a very simple application in Studio, deploy it to Studio's embedded server, then interact with the application through a Web browser.


== Assumptions

This tutorial assumes that you have link:/mule-fundamentals/v/3.7/download-and-launch-anypoint-studio[downloaded, installed, and launched Anypoint Studio], and that you've read through the link:/mule-fundamentals/v/3.7/anypoint-studio-essentials[Anypoint Studio Essentials].

== Creating a New Project

. In Anypoint Studio, click *File* then select *New* > *Mule Project*.
. Studio opens the *New Mule Project* wizard. In the *Name* field, enter the value `My First Project`, then click *Finish*.
+
image:new.png[new]
+
. Studio opens a new blank project. The following quick reference explains the different views you use to build a Mule project:
+
image:blank+canvas.png[blank+canvas]
+
. Begin designing your project by dragging and dropping an *HTTP Connector* from the *palette* onto the *canvas*. Notice that Studio automatically wraps the connector with a *flow*, thus saving you the step of manually creating one.
+
image:add+http.png[add+http]
+
. Add a *Set Payload Component* to your flow, by dragging it next to the HTTP connector on the canvas.
+
image:set+payload.png[set+payload]
+
. Use Message Flow and Configuration XML tabs below the canvas for alternating between visual and XML editing. Click the *Configuration XML* tab to see your application represented in XML.
+
image:xml+code.png[xml+code]
+
. Click the *Message Flow* tab to return to the graphical editor.
+
. Click the *Save* icon to save your project. 

== Configuring the Project

Now that you've modeled a basic application in Studio, you can take the steps to configure each individual element. The first element to configure is the HTTP Connector. The HTTP Connector allows your Mule application to connect to Web resources through the HTTP or HTTPS protocol.
The HTTP Connector needs to be given basic information before it can work. The following HTTP connector properties must be set to a value:

* Path
* Connector Configuration
* Name
* Host
* Port

You also create a Global Element for the HTTP Connector to reference. The Global Element encapsulates some reusable configuration properties. Multiple connectors can reuse the Global Element.

To configure the project:

. Click the HTTP Connector on the canvas to open its *Properties Editor*.
+
image:http+pelado.png[http+pelado]
+
. *Path* is already populated by the default value, slash `/`. For this example, accept the default values in *Connector Configuration*, or change *Host* to *localhost*.
+
. Click the green plus sign (`+`) next to *Connector Configuration* to create a new *Global Element*.
+
image:add+global+element.png[add+global+element]
+
. In Global Element Properties, accept the default values for all fields, and click *OK* to close the window.
+
image:global+element+default.png[global+element+default]
+
The *Connector Configuration* field is now populated with a reference to the element you just created. The red warning marks disappear from the properties editor and the representation for the connector on the canvas.
+
. Click the *Set Payload Component* on the canvas to open its properties editor in the console.
+
The Set Payload Component simply sets the message payload to a value you define.
+
. Set the *Value* field to `Hello World!` for example.
+
image:set+payload+hello+world.png[set+payload+hello+world]
+
. Once again, click the *Configuration XML* to view your changes in the XML configuration tab:
+
[source,xml, linenums]
----

<?xml version="1.0" encoding="UTF-8"?>

<mule xmlns:tracking="http://www.mulesoft.org/schema/mule/ee/tracking" xmlns:json="http://www.mulesoft.org/schema/mule/json" xmlns:http="http://www.mulesoft.org/schema/mule/http" xmlns="http://www.mulesoft.org/schema/mule/core" xmlns:doc="http://www.mulesoft.org/schema/mule/documentation"
    xmlns:spring="http://www.springframework.org/schema/beans" version="EE-3.6.2"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
http://www.mulesoft.org/schema/mule/http http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd
http://www.mulesoft.org/schema/mule/json http://www.mulesoft.org/schema/mule/json/current/mule-json.xsd
http://www.mulesoft.org/schema/mule/ee/tracking http://www.mulesoft.org/schema/mule/ee/tracking/current/mule-tracking-ee.xsd">

    <http:listener-config name="HTTP_Listener_Configuration" host="0.0.0.0" port="8081" doc:name="HTTP Listener Configuration"/>

   <flow name="my_first_projectFlow">
        <http:listener config-ref="HTTP_Listener_Configuration" path="/" doc:name="HTTP"/>
        <set-payload doc:name="Set Payload" value="Hello World!"/>
    </flow>
</mule>
----
+
. Click the *Save* icon to save your changes.

== Deploying the Project

Anypoint Studio embeds a server that you use for testing deployments as you code. You can deploy your application on the embedded server to see it working and perform any debugging activities before deploying to a production environment, such as an on-premises server or link:/cloudhub[CloudHub].

. In the *Package Explorer*, right-click the project name, then select *Run As* > *Mule Application*.
+
image:run+as.png[run+as]
+
. Studio launches the application on the embedded server, displaying its actions in the console. When complete, the console message reads: `Started app 'my_first_project'`
+
image:console1.png[console1]


== Interacting with the Project

. Open your favorite Web browser. 
. Navigate to the URL of your application (this address is the result of the default settings of the HTTP Connector):
+
`http://localhost:8081`
+
. The application accepts the request via its HTTP endpoint, then the set payload component sets the payload to "Hello World!", and finally the HTTP connector returns this payload as the response you see in your browser.
+
image:hello+world.png[hello+world]
+
. In Studio, stop the application from running using the *Terminate* icon in the console:
+
image:console2.png[console2]


== See Also

* *NEXT*: Dive into the more extensive *First Day* content starting with link:/mule-fundamentals/v/3.7/mule-concepts[Mule Concepts].
* Happier using the command line to run applications? Learn more about link:/mule-user-guide/v/3.7/starting-and-stopping-mule-esb[Starting and stopping Mule].
* Skip ahead in the syllabus to the link:/mule-fundamentals/v/3.7/basic-studio-tutorial[Basic Studio Tutorial].
