mule-fundamentals/v/3.8/build-a-hello-world-application.adoc
= Build a Hello World Mule Application
:keywords: anypoint, hello world, tutorial

It’s time to roll up your sleeves and build your first Mule application in Anypoint Studio!

As the objective of this quick tutorial is get something built and running fast, this document doesn't spend much time explaining components. More detailed explanations and concepts exist in the link:/mule-fundamentals/v/3.8/first-day-with-mule[First Day with Mule] and link:/mule-fundamentals/v/3.8/first-week-with-mule[First Week with Mule] sections of the link:/mule-fundamentals/v/3.8[Mule Fundamentals], but for now, let's just see Mule work: you're about to build a very simple application in Studio, deploy it to Studio's embedded server, then interact with the application through a Web browser.

== Prerequisites

This tutorial assumes that you have link:/mule-fundamentals/v/3.8/download-and-launch-anypoint-studio[downloaded, installed, and launched Anypoint Studio], and that you've read through the link:/mule-fundamentals/v/3.8/anypoint-studio-essentials[Anypoint Studio Essentials].

== Creating a New Project

. In Anypoint Studio, click *File* and *New* > *Mule Project*.
. Studio opens the *New Mule Project* wizard. In the *Name* field, enter the value `Basic Tutorial`, then click *Finish*.
+
image:new.png[new]
+
. Studio opens a new blank project. The following quick reference explains the different views you use to build a Mule project:
+
image:blank+canvas.png[blank+canvas]
+
. Begin designing your project by dragging and dropping an *HTTP Connector* from the *palette* onto the *canvas*. Notice that Studio automatically wraps the connector with a *flow*, thus saving you the step of manually creating one.
+
image:add-http.png[add+http]
+
. Add a *Set Payload Component* to your flow, by dragging it next to the HTTP connector on the canvas.
+
image:set+payload.png[set+payload]
+
. Click *Message Flow* (Visual Editor) and then *Configuration XML* (XML Editor) tabs below the canvas to alternate between the editors so that you can see how Studio provides both a visual and code representation of your project.
+
image:xml+code.png[xml+code]
+
. Click the *Message Flow* tab to return to the graphical editor.
+
. Click the *Save* icon or press Ctrl+S (Windows and Linux)  or CMD+S (Mac) to save your project:
+
image:studio-save-button.png[studio-save-button]

== Configuring the Project

Now that you've created a basic application in Studio, you can take the steps to configure each individual element. The first element to configure is the HTTP Connector. The HTTP Connector allows your Mule application to connect to Web resources through the HTTP or HTTPS protocol.
The HTTP Connector needs to be given basic information before it can work. The following HTTP connector properties must be set to a value:

* Path
* Connector Configuration
* Name
* Host
* Port

You also create a Global Element for the HTTP Connector to reference. The Global Element encapsulates some reusable configuration properties. Multiple connectors can reuse the Global Element.

To configure the project:

. Click the *HTTP Connector* on the canvas to open its *Properties Editor*, and click the green plus sign to configure the host and port number:
+
image:http+pelado.png[http+pelado]
+
. For this example, set the host to localhost and accept the default port 8081:
+
image:http-global-config.png[http-global-config]
+
. Click *OK*. This returns you to the properties window.
. *Path* is already populated by the default value, slash `/`.
+
The *Connector Configuration* field is now populated with a reference to the element you just created.
+
. Click the connector in the Canvas, and the red warning marks disappear from the properties editor and the representation for the connector on the canvas.
+
. Click the *Set Payload Component* on the canvas to open its properties editor in the console.
+
The Set Payload Component simply sets the message payload to a value you define.
+
. Set the *Value* field to `Hello World!` for example.
+
image:set+payload+hello+world.png[set+payload+hello+world]
+
. Once again, click the *Configuration XML* to view your changes in the XML configuration tab:
+
[source,xml, linenums]
----
include::_sources/build-a-hello-world-application.xml[]
----
+
. Click the *Save* icon to save your changes.

== Deploying the Project

Anypoint Studio embeds a server that you use for testing deployments as you code. You can deploy your application on the embedded server to see it working and perform any debugging activities before deploying to a production environment, such as an link:/runtime-manager/deploying-to-your-own-servers[on-premise server] or link:/runtime-manager/deploying-to-cloudhub[Runtime Manager].

. In the *Package Explorer*, right-click the project name, then select *Run As* > *Mule Application*.
+
image:run+as.png[run+as]
+
You can also run your application from the Studio *Run* menu. Click your project name in Package Explorer and then click *Run* > *Run As* > *Mule Application*:
+
image:run-as2.png[run-as2]
+
. Studio launches the application on the embedded server, displaying its actions in the console. When complete, the console message reads:
+
`Started app 'basic_tutorial'`
+
image:console1.png[console output]

== Interacting with the Project

. Open your favorite Web browser. 
. Navigate to the URL of your application (this address is the result of the default settings of the HTTP Connector):
+
`http://localhost:8081`
+
. The application accepts the request via its HTTP endpoint, then the set payload component sets the payload to "Hello World!", and finally the HTTP connector returns this payload as the response you see in your browser.
+
image:hello+world.png[hello+world]
+
. In Studio, stop the application from running using the *Terminate* icon in the console:
+
image:console2.png[console2]


== See Also

* *NEXT*: Dive into the more extensive *First Day* content starting with link:/mule-fundamentals/v/3.8/mule-concepts[Mule Concepts].
* Happier using the command line to run applications? Learn more about link:/mule-user-guide/v/3.8/starting-and-stopping-mule-esb[Starting and stopping Mule].
* Skip ahead in the syllabus to the link:/mule-fundamentals/v/3.8/basic-studio-tutorial[Basic Studio Tutorial].
* link:http://training.mulesoft.com[MuleSoft Training]
* link:https://www.mulesoft.com/webinars[MuleSoft Webinars]
* link:http://blogs.mulesoft.com[MuleSoft Blogs]
* link:http://forums.mulesoft.com[MuleSoft Forums]
* link:https://www.mulesoft.com/support-and-services/mule-esb-support-license-subscription[MuleSoft Support]
* mailto:support@mulesoft.com[Contact MuleSoft]
